# fastapiwebsocket

./: README.md  locustfile.py  pyproject.toml  pytest.ini
app/: auth.py  db.py  main.py
app/models/: settings.py  teams.py  todo.py
app/websocket/: settings.py  teams.py  todo.py
tests/: test_settings.py  test_teams.py  test_todo.py
